# CompassFusion

./: .gitattributes  .gitignore  FILELIST.txt  LICENSE  MANIFEST_CORE.md  README.md  pyproject.toml
configs/: compass_fusion_211013.xml  compass_fusion_great_msf_example.xml
data_examples/: DATASETS.md
data_examples/great_msf_20211013/model/: leap_seconds  ocean_tide  oceanload  poleut1_great
data_examples/great_msf_20211013/xml/: great-211013-lcppp.xml  great-211013-lcrtk.xml  great-211013-tcppp.xml  great-211013-tcrtk.xml
docs/: README_COMPASS_FUSION.md  RELEASE_NOTES_COMPASS_FUSION.md
scripts/: compare_compass_fusion.py  compare_kvh0_ppk.py  compare_pots_snx.py  compare_sept2860_gt.py  diagnose_kvh0_ppk_integers.py  diagnose_pots_ppp.py  export_spp_ins_inputs.py  run_compass_fusion_211013.ps1  run_compass_fusion_tests.py  run_ppp_great_msf_example.ps1
src/: run_compass_fusion.py  run_ins.py  run_ppk.py  run_ppp.py  run_spp.py  run_spp_compare.py
src/compass/: __init__.py
src/compass/core/: __init__.py  constants.py  gnss_types.py  transforms.py  types.py
src/compass/gnss/: __init__.py  bias_osb.py  bias_sinex.py  code_dcb.py  ionosphere.py  lambda_ar.py  orbex_attitude.py  ppk.py  ppp.py  ppp_models.py  precise.py  satellite.py  spp.py  trajectory_smoother.py
src/compass/ins/: __init__.py  coupling.py  mechanization.py
src/compass/io/: __init__.py  rinex_native.py
tests/: test_compass_fusion_config.py  test_compass_fusion_regression.py  test_ins.py  test_multisys_spp.py  test_ppp.py  test_precise.py  test_rinex_native.py
(+13 files in other folders)
